# commit-agent

./: .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt
agent/: agent.py  analyzer.py  generator.py  validator.py
commit_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: lab.yaml  loader.py  prod.yaml
core/: analyzer.py  engine.py  generator.py  logger.py  types.py  validator.py
eval/: runs.jsonl
lab/: batch.py  compare.py  metrics.py  runner.py
prod/: app.py  cli.py  profile_store.py
prompting/: structured.txt
prompts/: few_shot.txt  structured.txt  zero_shot.txt
providers/: base.py  groq_provider.py  ollama.py  openai.py  registry.py
